[gd_scene load_steps=2 format=3 uid="uid://df1jngepqt0fk"]

[ext_resource type="Script" uid="uid://dvq43j0pm8iog" path="res://scripts/NPC/Shop/shop.gd" id="1_4q0e3"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4q0e3")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.3647059)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "Shop"

[node name="GoldLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "YourGold: "

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -243.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 0

[node name="Buy" type="ScrollContainer" parent="Panel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="BuyGrid" type="GridContainer" parent="Panel/TabContainer/Buy"]
layout_mode = 2

[node name="Sell" type="ScrollContainer" parent="Panel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="SellGrid" type="GridContainer" parent="Panel/TabContainer/Sell"]
layout_mode = 2

[node name="Close" type="Button" parent="Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "X"

[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
